--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,14 @@ html {
   margin: 0;
   padding: 0;
 }
+@keyframes scaleUpAndDown {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1); /* Slightly enlarge the button */
+  }
+}
 
 :root {
   --primary: #000;
