--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -218,4 +219,23 @@ html {
     opacity: 0.6;
     font-size: 1rem;
   }
+}
+
+.montserrat-font{
+  font-family: "Montserrat", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 19px; /* Width of the scrollbar */
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #be3434; /* Scrollbar thumb color */
+  border-radius: 5px;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: #789751; /* Scrollbar track color */
 }
